# runmind

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  start.ps1  subir.bat  subir.ps1
backend/: .env.example  Dockerfile  README.md  backup_now.py  garmin_analysis.py  garmin_diagnostico.py  garmin_dump.py  garmin_health_seed.py  garmin_login.py  garmin_push_plan.py  garmin_push_test.py  pyproject.toml  rerun_feedback.py  runner.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py
backend/app/core/: clock.py  config.py  messages.py  weekdays.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/presentation/: __init__.py
backend/tests/: test_health.py
backend/tests/assessment/: test_training_assessment_builder.py
backend/tests/backup/: test_storage_backup.py
backend/tests/coach/: factories.py  test_ai_analysis_writer.py  test_ai_plan_service.py  test_aversion_flow.py  test_aversion_swap_engine.py  test_body_reading_builder.py  test_body_reading_writer.py  test_coach_conversation_engine.py  test_coach_pipeline_integration.py  test_coach_plan_engine.py  test_coach_summary_builder.py  test_coach_writer.py  test_conversation_context_builder.py  test_conversation_summary_engine.py  test_executed_week_summary.py  test_goal_change_applier.py  test_goal_change_detector.py  test_intelligence.py  test_intent_router.py  test_memory_extraction_engine.py  test_missed_workout_judge.py  test_move_skip_engine.py  test_move_skip_flow.py  test_negotiation_engine.py  test_negotiation_flow.py  (+13 more)
(+372 files in other folders)
